@@ -1899,6 +1899,41 @@ name|defaultSuffix
 operator|=
 name|suffix
 expr_stmt|;
+if|if
+condition|(
+name|d
+operator|->
+name|defaultSuffix
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|1
+operator|&&
+name|d
+operator|->
+name|defaultSuffix
+operator|.
+name|startsWith
+argument_list|(
+name|QLatin1Char
+argument_list|(
+literal|'.'
+argument_list|)
+argument_list|)
+condition|)
+name|d
+operator|->
+name|defaultSuffix
+operator|.
+name|remove
+argument_list|(
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// Silently change ".txt" -> "txt".
 block|}
 end_function
 begin_function
