@@ -6439,7 +6439,7 @@ return|;
 block|}
 end_function
 begin_comment
-comment|/*!     \property QFileDialog::defaultSuffix     \brief suffix added to the filename if no other suffix was specified      This property specifies a string that will be added to the     filename if it has no suffix already. The suffix is typically     used to indicate the file type (e.g. "txt" indicates a text     file). */
+comment|/*!     \property QFileDialog::defaultSuffix     \brief suffix added to the filename if no other suffix was specified      This property specifies a string that will be added to the     filename if it has no suffix already. The suffix is typically     used to indicate the file type (e.g. "txt" indicates a text     file).      If the first character is a dot ('.'), it is removed. */
 end_comment
 begin_function
 DECL|function|setDefaultSuffix
