@@ -3587,6 +3587,26 @@ name|fd
 operator|.
 name|setDefaultSuffix
 argument_list|(
+literal|".txt"
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|fd
+operator|.
+name|defaultSuffix
+argument_list|()
+argument_list|,
+name|QString
+argument_list|(
+literal|"txt"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fd
+operator|.
+name|setDefaultSuffix
+argument_list|(
 name|QString
 argument_list|()
 argument_list|)
